<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/scannerFragment"
        android:icon="@drawable/ic_nav_scanner"
        android:title="@string/scanner_title" />
    <item
        android:id="@id/receiptListFragment"
        android:icon="@drawable/ic_nav_receipts"
        android:title="@string/receipts_title" />
    <item
        android:id="@id/expensesFragment"
        android:icon="@drawable/ic_nav_expenses"
        android:title="@string/expenses_title" />
    <item
        android:id="@id/categoriesFragment"
        android:icon="@drawable/ic_nav_operations"
        android:title="@string/operations_title" />
    <item
        android:id="@id/settingsFragment"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/settings_title" />
</menu>
